--- a/themes/madhuriYoga/layouts/partials/head.html
+++ b/themes/madhuriYoga/layouts/partials/head.html
@@ -18,7 +18,15 @@
         html {
             scroll-behavior: smooth
         }
+         .logo{
+            width:25%;
+         }
 
+         @media only screen and (max-device-width : 480px) {
+            .logo{
+            width:75%;
+         }
+}
         .markdown ul {
             list-style-type: circle;
             margin-top: 1.5rem;
