--- a/themes/madhuriYoga/layouts/partials/share.html
+++ b/themes/madhuriYoga/layouts/partials/share.html
@@ -1,6 +1,6 @@
 <div class="mt-4 text-2xl md:text-3xl mx-auto w-full md:w-1/2 flex justify-around">
     <a target="_blank" rel="noopener noreferrer" aria-label="share {{ .Title| plainify }} on facebook"
-        href='https://facebook.com/sharer/sharer.php?href={{ .Permalink }}'>
+        href='https://facebook.com/sharer/sharer.php?u={{ .Permalink }}'>
         <i class="bi bi-facebook hover:text-mbrown"></i>
     </a>
 
